tests/marker_type/fail/misplaced_copy_clone.stderr
error[E0119]: conflicting implementations of trait `Clone` for type `ComplexMarker`
 --> tests/marker_type/fail/misplaced_copy_clone.rs:5:10
  |
4 | #[marker_type]
  | -------------- first implementation here
5 | #[derive(Clone, Copy)]
  |          ^^^^^ conflicting implementation for `ComplexMarker`
  |
  = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Copy` for type `ComplexMarker`
 --> tests/marker_type/fail/misplaced_copy_clone.rs:5:17
  |
4 | #[marker_type]
  | -------------- first implementation here
5 | #[derive(Clone, Copy)]
  |                 ^^^^ conflicting implementation for `ComplexMarker`
  |
  = note: this error originates in the derive macro `Copy` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0507]: cannot move out of `*self` which is behind a shared reference
 --> tests/marker_type/fail/misplaced_copy_clone.rs:5:10
  |
5 | #[derive(Clone, Copy)]
  |          ^^^^^ move occurs because `*self` has type `ComplexMarker`, which does not implement the `Copy` trait
  |
note: if `ComplexMarker` implemented `Clone`, you could clone the value
 --> tests/marker_type/fail/misplaced_copy_clone.rs:6:1
  |
5 |   #[derive(Clone, Copy)]
  |            ----- you could clone this value
6 | / enum Complex {
7 | |     A(bool),
8 | |     B { val: u8 },
9 | | }
  | |_^ consider implementing `Clone` for this type
  = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0507]: cannot move out of `*self` which is behind a shared reference
 --> tests/marker_type/fail/misplaced_copy_clone.rs:4:1
  |
4 | #[marker_type]
  | ^^^^^^^^^^^^^^ move occurs because `*self` has type `ComplexMarker`, which does not implement the `Copy` trait
  |
note: if `ComplexMarker` implemented `Clone`, you could clone the value
 --> tests/marker_type/fail/misplaced_copy_clone.rs:6:1
  |
4 |   #[marker_type]
  |   -------------- you could clone this value
5 |   #[derive(Clone, Copy)]
6 | / enum Complex {
7 | |     A(bool),
8 | |     B { val: u8 },
9 | | }
  | |_^ consider implementing `Clone` for this type
  = note: this error originates in the derive macro `Clone` (in Nightly builds, run with -Z macro-backtrace for more info)
